--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
+    "angular-aria": "^1.5.8",
+    "angular-material": "^1.1.1",
     "angular-messages": "^1.5.8",
     "angular-toastr": "^2.1.1",
-    "bootstrap": "^3.3.7"
+    "angular-ui-grid": "^3.2.9",
+    "angular-ui-router": "^0.3.2",
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
+    "oclazyload": "^1.0.9"
   }
 }
