--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angular-ui-router": "^0.3.2",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.1.1",
     "oclazyload": "^1.0.9"
   }
 }
